--- a/CSS.css
+++ b/CSS.css
@@ -1,4 +1,3 @@
-	
 	<style>
 	
 		#container
@@ -16,11 +15,11 @@
 			text-align: center;
 			background-color: black;
 			color: white;
-			padding: 10px;
+			padding: 1%;
 		}
 		
 		 li.menu {
-            width: 160px;
+            width: 1%;
 			
             text-align: center-left;
             color: #2c2c2c;
@@ -40,9 +39,9 @@
 				border-bottom-style: solid;
 				border-left-style: solid;
 				border-right-style: solid;
-				width: 245px;
-				height: 316px;
-				padding: 10px;
+				width: 17%;
+				height: 600%;
+				padding: 2%;
 				background-color: black;
 				float: left;
 			}
@@ -73,7 +72,7 @@
 		
 		#wodnanaglowek
 		{
-			ttext-align: center;
+			text-align: center;
 			padding: 5%;
 			text-shadow: 2px 2px 5px black;
 		}
